<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"

    tools:context=".AuthActivity">

    <TextView
        android:id="@+id/greetings"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="548dp"
        android:fontFamily="monospace"
        android:text="@string/bienvenido"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/white"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signInButton"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffdb99"
                android:text="@string/registrar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/logInButton"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffdb99"
                android:text="@string/login" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>